--- a/templates/print/bond_print.html
+++ b/templates/print/bond_print.html
@@ -3,7 +3,7 @@
 <input id="bond-id-input" type="hidden" name="bond" value="{{bond.id}}">
 <input id="page-css" type="hidden" name="css" value="{% static 'css/custom.css' %}">
 <p id="print-instructions">
-    If the print preview does not show thw watermark, please make sure your print options allow 'background graphics'.
+    If the print preview does not show the watermark, please make sure your print options allow 'background graphics'.
 </p>
 <form id="print-bond-form" action="" method="POST">
     {% csrf_token %}
