--- a/templates/admin/powers_inventory.html
+++ b/templates/admin/powers_inventory.html
@@ -1,7 +1,7 @@
 {% block result_list %}
 
 <div id="id_powers_inventory" class="module">
-	<table>
+	<table id="data_table">
 		<caption>
 			<a title="Powers Inventory">Powers Inventory</a>
 		</caption>
