--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,11 +1,11 @@
-{% extends "admin/index.html" %}
-
+{% extends "admin/index.html" %}{% load static %}
 	{% block sidebar %}
 		{{block.super}}
 		{% if request.user.is_superuser %}
 
 			<div id="id_powers_inventory" class="module">
-				<table>
+				<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
+				<table id="myTable">
 					<caption>
 						<a title="Powers Inventory">Powers Inventory</a>
 					</caption>
@@ -29,4 +29,29 @@
 				</table>
 			</div>
 		{% endif %}
-	{% endblock %}
+	{% endblock %}{% block extrahead %}{{ block.super }}
+<script>
+	 myFunction = function() {
+          // Declare variables
+          var input, filter, table, tr, td, i, txtValue;
+          input = document.getElementById("myInput");
+          filter = input.value.toUpperCase();
+          table = document.getElementById("myTable");
+          tr = table.getElementsByTagName("tr");
+
+          // Loop through all table rows, and hide those who don't match the search query
+          for (i = 0; i < tr.length; i++) {
+            td = tr[i].getElementsByTagName("td")[0];
+            if (td) {
+              txtValue = td.textContent || td.innerText;
+              if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                tr[i].style.display = "";
+              } else {
+                tr[i].style.display = "none";
+              }
+            }
+          }
+       }
+</script>
+{% endblock %}
+
