--- a/templates/print/bond_print.html
+++ b/templates/print/bond_print.html
@@ -54,7 +54,9 @@
                 </p>
                 <p class="contract-regular">
                     {{ surety_company.print_content_four | safe }}
+                    <span class='long-date'>{{bond.print_date}}.</span>
                 </p>
+
             </div>
         </div>
         <div id="bond-bottom-page">
